refactoring optionals
dsfg

dfg

arrays.asList vs new ArrayList

ds

Update CopyOfDemo.java